...
                android:title="Share Group Code" />
        </menu>
    </item>
    <item android:title="Manage Account"
        android:id="@+id/manage_account">
        <menu >
            <item android:title="Leave Group"
                android:id="@+id/leave_group"
                android:icon="@android:drawable/ic_menu_close_clear_cancel" />
            <item
                android:id="@+id/logout"
                android:title="Log Out"
                android:icon="@android:drawable/ic_menu_directions" />
        </menu>
    </item>

</menu>

